预览功能禁用，考虑删除