@@ -138,12 +138,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--add-reads</arg>
-                        <arg>javafx.graphics=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</arg>
-                    </compilerArgs>
                     <release>15</release>
                 </configuration>
             </plugin>
